# anom-rl

./: .gitignore  README.md  pyproject.toml
anomrl/algos/agents/: __init__.py  random_policy.py  static_policy.py
anomrl/algos/detectors/: __init__.py  abstract_detector.py  ae_detectors.py  dm_detectors.py  isoforest_detector.py  knn_detector.py  ocsvm_detector.py  prednet_detector.py  random_detector.py  riqn_detector.py
anomrl/algos/models/: core_models.py  latent_dynamics.py  lit_autoencoders.py  lit_models.py  prednet.py  riqn.py
anomrl/common/: agent_utils.py  env_utils.py  eval_utils.py  helpers.py  lit_utils.py  log_utils.py  mlflow_utils.py  plot_utils.py  sb3_callbacks.py  trainers.py  wrappers.py
anomrl/data/: data_utils.py  datamodules.py  datasets.py
anomrl/exp/: collect_all_datasets.py  eval_detector.py  eval_policy.py  search_anomaly_parameters.py  train_agent.py
anomrl/exp/cfgs/: eval_detector.yaml  train_agent_cfg.yaml
anomrl/exp/cfgs/agent/: tqc.yaml  tqc_img.yaml  tqc_large.yaml  tqc_multi.yaml
anomrl/exp/cfgs/detector/: isoforest.yaml  knn.yaml  knn_ae.yaml  knn_resnet.yaml  ldm.yaml  lstm_dm.yaml  ocsvm.yaml  pedm.yaml  pred_ae.yaml  prednet.yaml  riqn.yaml  simple_ae.yaml  simple_dm.yaml
